--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,39 +21,39 @@ jobs:
   #             --template-file template.yml \
   #             --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
   #             --region us-east-1
-  # configure_infrastructure: 
-  #   docker:
-  #     - image: python:3.7-alpine3.11
-  #   steps:
-  #     - checkout
-  #     - add_ssh_keys:
-  #             # You can get this ID in the section where you registered the SSH Key
-  #             fingerprints: ["e9:fa:98:18:b5:de:d9:7c:db:0a:5b:15:0a:08:53:30"] 
-  #     - run:
-  #         name: Install Ansible
-  #         command: |
-  #           apk add --update ansible
-  #     - run:
-  #         name: Run Playbook and Configure server
-  #         command: |
-  #           ansible-playbook -i inventory.txt main-remote.yml
+  configure_infrastructure: 
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+              # You can get this ID in the section where you registered the SSH Key
+              fingerprints: ["e9:fa:98:18:b5:de:d9:7c:db:0a:5b:15:0a:08:53:30"] 
+      - run:
+          name: Install Ansible
+          command: |
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            ansible-playbook -i inventory.txt main-remote.yml
   # Exercise: Smoke Testing
-smoke_test:
- docker:
-   - image: alpine:latest
- steps:
-   - run: apk add --update curl
-   - run:
-       name: smoke test
-       command: |
-         URL="https://blog.udacity.com/"
-         # Test if website exists
-         if curl -s --head ${URL} 
-         then
-           return 0
-         else
-           return 1
-         fi
+  smoke_test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - run: apk add --update curl
+      - run:
+          name: smoke test
+          command: |
+            URL="https://blog.udacity.com/"
+            # Test if website exists
+            if curl -s --head ${URL} 
+            then
+              return 0
+            else
+              return 1
+            fi
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
